Issue #2120449 by el7cosmos: Incorrect alignment of form elements on administer users screen

--- a/bootstrap_subtheme/less/overrides.less
+++ b/bootstrap_subtheme/less/overrides.less
@@ -629,6 +629,15 @@ td.radio {
   }
 }
 
+// Exposed filters
+.form-horizontal .form-group label {
+  .make-sm-column(2);
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 7px;
+  text-align: right;
+}
+
 // Treat all links inside alert as .alert-link
 .alert a {
   font-weight: @alert-link-font-weight;
